[package]
name = "backpack_infiltrator"
version = "1.0.0"
edition = "2021"
description = "Fast Minecraft Sophisticated Backpacks / container inspector and visualizer"

[[bin]]
name = "infiltrator"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
fastnbt = "2"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
arboard = "3"
rayon = "1"
ureq = "2"
base64 = "0.22"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
