[package]
name = "dumper"
version = "1.0.0"
edition = "2021"
description = "Native Minecraft region scanner that dumps container/block-entity contents to compressed NBT"

[[bin]]
name = "dumper"
path = "src/main.rs"

[dependencies]
fastnbt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
libdeflater = "1"
rustc-hash = "2"
mimalloc = "0.1"
